--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 humanize = "^4.0.0"
-click = "^8.0.3"
+click = ">=7.1.2, <=9.0.0"
 pytimeparse = "^1.1.8"
 
 [tool.poetry.dev-dependencies]
