--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,4 +19,6 @@ jobs:
     - run: pip install nox-poetry==0.9.0
     - run: nox
     - run: poetry build
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
     - run: poetry publish
