--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,4 @@ jobs:
     - run: pip install nox-poetry==0.9.0
     - run: nox
     - run: poetry build
-      env:
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-    - run: poetry publish
+    - run: poetry publish --username=__token__ --password=${{ secrets.PYPI_TOKEN }}
