--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,9 @@ ignore_missing_imports = True
 [mypy-humanize.*]
 ignore_missing_imports = True
 
+[mypy-importlib_metadata.*]
+ignore_missing_imports = True
+
 [mypy-nox.*]
 ignore_missing_imports = True
 
