--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,20 @@ authors = ["Joris Clement <flyingdutchman@posteo.eu>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-humanize = "^4.0.0"
+python = "^3.6"
+humanize = ">=3.14.0, <5.0.0"
 click = ">=7.1.2, <=9.0.0"
 pytimeparse = "^1.1.8"
+importlib-metadata = {version = "4.2.0", python = "<=3.7"}
 
 [tool.poetry.dev-dependencies]
-black = "^22.1.0"
-flake8 = "^4.0.1"
-flake8-import-order = "^0.18.1"
-flake8-black = "^0.2.4"
-mypy = "^0.931"
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
+black = {version = "^22.1.0", python = ">=3.9"}
+flake8 = {version = "^4.0.1", python = ">=3.9"}
+mypy = {version = "^0.931", python = ">=3.9"}
+flake8-black = {version = "^0.2.4", python = ">=3.9"}
+flake8-import-order = {version = "^0.18.1", python = ">=3.9"}
 
 [tool.poetry.scripts]
 watson-overtime = "watson_overtime.main:main"
