--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.2.0"
 [tool.poetry.dependencies]
 python = "^3.6"
 humanize = ">=3.14.0, <5.0.0"
-click = ">=7.1.2, <=9.0.0"
+click = ">=7.1.2, <9.0.0"
 pytimeparse = "^1.1.8"
 importlib-metadata = {version = "4.2.0", python = "<=3.7"}
 
