--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,19 +5,13 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.10"
         architecture: x64
     - run: pip install pip==22.0.4
-    - run: pip install nox==2022.1.7
     - run: pip install poetry==1.1.13
-    - run: pip install nox-poetry==0.9.0
-    - run: nox
     - run: poetry build
     - run: poetry publish --username=__token__ --password=${{ secrets.PYPI_TOKEN }}
